--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 
+    <div class="container-fluid">
+      <div class="row landing_page">
+        <div class="col-md-12">
+          <img src="img/logo/logo.png" alt=""><br><br>
+          <h1 class="display-4">WELCOME<br><br> TO DELANI STUDIO</h1>
+          <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+        </div>
+        <div class="col-md-12 mouse">
+          <img src="img/mouse_click.png" alt="">
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
