--- a/index.html
+++ b/index.html
@@ -35,5 +35,17 @@
       </div>
     </div>
 
+    <div class="container-fluid">
+      <div class="row about">
+        <div class="col-md-12">
+          <h1>ABOUT US</h1>
+          <p>when you work with us, you are part of a team of committed collaborators. All aspects of our software development process are integrated, interactive, and agile.</p>
+          <p>our approach unifies design, development, and product management to create exceptional products.</p>
+          <p>We start each project by understanding your businessgoals,the user's needs and the product requirements.</p>
+          <p>Then we help translate them into effective and elegant solutions.</p>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
