--- a/index.html
+++ b/index.html
@@ -47,5 +47,16 @@
       </div>
     </div>
 
+    <div class="container-fluid">
+      <div class="row serv">
+        <div class="col-md-12">
+          <h1>SERVICES</h1>
+          <P>Before we sign a contract or write a line of code, our team will spend the necessary time needed to understand your product vision.</P>
+          <p>The outcome of this scoping session is a proposal or high-level work.</p>
+          <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
