--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <div class="container-fluid">
       <div class="row landing_page">
         <div class="col-md-12">
-          <img src="img/logo/logo.png" alt=""><br><br>
+          <img src="./images/logo/logo.png" alt=""><br><br>
           <h1 class="display-4">WELCOME<br><br> TO DELANI STUDIO</h1>
           <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
         </div>
         <div class="col-md-12 mouse">
-          <img src="img/mouse_click.png" alt="">
+          <img src="./images/mouse_click.png" alt="">
         </div>
       </div>
     </div>
@@ -64,21 +64,21 @@
           <h1>WHAT WE DO</h1>
         </div>
         <div class="col-md-4 des" id="toClick1" >
-          <img src="./img/services_icons/design_icon.png" alt="" class="img1">
+          <img src="./images/services_icons/design_icon.png" alt="" class="img1">
           <p><b>DESIGN</b></p>
           <div class="design">
             <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
           </div>
         </div>
         <div class="col-md-4 dev" id="toClick2">
-          <img src="./img/services_icons/dev_icon.png" alt="" class="img2">
+          <img src="./images/services_icons/dev_icon.png" alt="" class="img2">
           <P><b>DEVELOPMENT</b></P>
           <div class="development">
             <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
           </div>
         </div>
         <div class="col-md-4 pm" id="toClick3">
-          <img src="./img/services_icons/product_icon.png" alt="" class="img3">
+          <img src="images/services_icons/product_icon.png" alt="" class="img3">
           <P><b>PRODUCT MANAGEMENT</b></P>
           <div class="pmanagement">
             <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve.</p>
