--- a/index.html
+++ b/index.html
@@ -87,6 +87,48 @@
       </div>
     </div>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 portfolio">
+          <h1>PORTFOLIO</h1>
+        </div>
+        <div class="col-md-3" >
+          <img src="./images/portfolio/work1.jpg" alt="" class="portimg" id="work1">
+          <p id="text1">Project 1</p>
+        </div>
+        <div class="col-md-3" >
+          <img src="./images/portfolio/work2.jpg" alt=""class="portimg" id="work2">
+          <p id="text2">Project 2</p>
+        </div>
+        <div class="col-md-3" >
+          <img src="./images/portfolio/work3.jpg" alt=""class="portimg" id="work3">
+          <p id="text3">Project 3</p>
+        </div>
+        <div class="col-md-3" >
+          <img src="./images/portfolio/work4.jpg" alt=""class="portimg" id="work4">
+          <p id="text4">Project 4</p>
+        </div>
+        <div class="col-md-3" >
+          <img src="./images/portfolio/work5.jpg" alt=""class="portimg" id="work5">
+          <p id="text5">Project 5</p>
+        </div>
+        <div class="col-md-3" >
+          <img src="./images/portfolio/work6.jpg" alt=""class="portimg" id="work6">
+          <p id="text6">Project 6</p>
+        </div>
+        <div class="col-md-3" >
+          <img src="./images/portfolio/work7.jpg" alt=""class="portimg" id="work7">
+          <p id="text7">Project 7</p>
+        </div>
+        <div class="col-md-3">
+          <img src="./images/portfolio/work8.jpg" alt=""class="portimg" id="work8">
+          <p id="text8">Project 8</p>
+        </div>
+      </div>
+    </div>
+
+
+
 
 
 
