--- a/index.html
+++ b/index.html
@@ -127,6 +127,36 @@
       </div>
     </div>
 
+    <div class="container-fluid">
+      <div class="row contact">
+        <div class="col-md-12">
+          <h1>CONTACT US</h1>
+        </div>
+        <div class="container">
+          <form action="" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div class="form-row">
+              <div class="form-group col">
+                <input type="Name" id="name" class="form-control bg-transparent text-white" name="FNAME" value="" placeholder="Name...">
+              </div>
+              <div class="form-group col">
+                <input type="Email" id="email" class="form-control bg-transparent text-white" name="EMAIL" value="" placeholder="Email...">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <textarea id="textarea" class="form-control bg-transparent text-white" placeholder="Your message here..." name="MMERGE2"></textarea>
+            </div>
+            <div>
+              <button class="btn btn-primary" type="submit" onclick="validateForm()">Submit</button>
+              <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
 
 
 
