--- a/index.html
+++ b/index.html
@@ -159,6 +159,29 @@
 
 
 
+    <div class="container">
+      <footer class="row footer">
+        <img src="./images/social_icons/twitter.png" alt="" id="img1">
+        <img src="./images/social_icons/dribble.png" alt="" id="img2">
+        <img src="./images/social_icons/facebook.png" alt="" id="img3">
+        <img src="./images/social_icons/g_plus.png" alt="" id="img4">
+        <img src="./images/social_icons/skype.png" alt="" id="img5">
+        <img src="./images/social_icons/stumble_upon.png" alt=""id="img6">
+        <img src="./images/social_icons/behance.png" alt=""id="img7">
+        <img src="./images/social_icons/pinterest.png" alt=""id="img8">
+        <img src="./images/social_icons/flickr.png" alt=""id="img9">
+        <img src="./images/social_icons/you_tube.png" alt=""id="img10">
+      </footer>
+      <div>
+        <h2>DELANI STUDIO</h2>
+      </div>
+      <div>
+        <h3>2019</h3>
+      </div>
+    </div>
+
+
+
 
 
 
